--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -8,16 +8,21 @@ $blackest: #000
 $white: #FFF
 $green: #37D997
 $lightOrange: #F19D2F
+$orangeLine: #E27500
 $bgColor: #F0F0F0
 
 .offer-header
     background-color: $orange
+    padding: 0.625rem 0.875rem
+    display: flex
+    height: max-content
+    justify-content: space-between
 
 .offer-header__text
     color: $black
     text-transform: uppercase
     font-size: 0.7934rem
-    padding: 0.625rem 0
+    width: 100%
     text-align: center
 
 .offer-logo
@@ -54,6 +59,14 @@ $bgColor: #F0F0F0
     background-color: $lightOrange
     gap: 0.634rem
 
+.offer-time
+    display: flex
+    justify-content: center
+
+.offer-time span
+    display: block
+    width: max-content
+
 .offer-timer__description
     font-size: 0.6624rem
 
@@ -66,6 +79,20 @@ $bgColor: #F0F0F0
 
 .offer-price__old
     font-size: 1.1298rem
+    position: relative
+
+    &:before
+        content: ''
+        display: block
+        position: absolute
+        width: 90%
+        height: 0.2196rem
+        background-color: $orangeLine
+        top: 0
+        bottom: 0
+        left: 0
+        right: 0
+        margin: auto
 
 .offer-price__new
     font-size: 1.3938rem
@@ -107,15 +134,108 @@ $bgColor: #F0F0F0
     font-weight: 700
     text-transform: capitalize
 
-
-.products-content__rating 
+.products-content__rating
     display: flex
     align-items: center
     gap: 0.625rem
-    
+
 .products-content__rating-stars
     height: 0.9375rem
 
 .products-content__rating-count-reviews
     line-height: 0.9375rem
     height: 0.9375rem
+
+.order
+    margin-top: 1.25rem
+
+.order-options
+    display: flex
+    justify-content: space-between
+    gap: 1rem
+
+.order-options__option
+    text-align: center
+    width: calc(50% - 0.5rem)
+    display: flex
+    flex-direction: column
+    gap: 0.25rem
+
+.order-options__option-title
+    color: $black
+    font-size: 0.625rem
+
+.options-select
+    background-color: $white
+    border-radius: 1.25rem
+    padding: 0.875rem 1.875rem
+    font-family: 'Gotham Pro'
+    color: $black
+    font-size: 1.3556rem
+    font-weight: 700
+    text-transform: uppercase
+    width: 100%
+    transition: all .5s
+
+.options-select__wrapper
+    position: relative
+
+    &.active
+        .options-select__arrow
+            transform: rotate(180deg)
+
+.options-select__arrow
+    height: max-content
+    position: absolute
+    right: 1.1875rem
+    left: unset
+    top: 0
+    bottom: 0
+    margin: auto 0
+
+.button-buy
+    margin-top: 1.2994rem
+    display: flex
+    align-items: center
+    justify-content: center
+    background-color: $green
+    border-radius: 0.9375rem
+    width: 100%
+    height: 3.125rem
+    font-size: 1.875rem
+    color: $white
+    text-transform: uppercase
+    font-weight: 500
+
+.slider__current-product
+    margin-top: 1.25rem
+    overflow: hidden
+    border-radius: 1.25rem
+    height: 14.5rem
+
+    img
+        height: 100%
+        transition: all 0.7s
+
+.slider__pagination
+    margin: 1.25rem 0
+    display: flex
+    justify-content: space-between
+    gap: 0.75rem
+
+.slider__pagination-item
+    width: calc(25% - 0.75rem)
+    border-radius: 0.625rem
+    overflow: hidden
+    transition: all .3s
+
+    &.active
+        opacity: 0.4
+
+.slider__pagination-item img
+    height: 100%
+    pointer-events: none
+
+.za-flag
+    display: inline
+    height: 0.75rem
