second hotfix assets

--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -1,5 +1,5 @@
 @import '../fonts/Gotham\ Pro/gothampro.css'
-@import './reset.css'
+@import 'asset/css/reset.css'
 
 $orange: #F19D2F
 $peach: #FFD1AC
@@ -31,7 +31,7 @@ $bgColor: #F0F0F0
     text-align: center
 
 .offer-content
-    background-image: url('/assets/images/offer.png')
+    background-image: url('assets/images/offer.png')
     height: 18.1875rem
     background-position: 50% 60%
     background-size: 150% 200%
