third hotfix assets

--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -1,4 +1,4 @@
-@import '../fonts/Gotham\ Pro/gothampro.css'
+@import 'assets/fonts/Gotham\ Pro/gothampro.css'
 @import 'asset/css/reset.css'
 
 $orange: #F19D2F
@@ -37,6 +37,7 @@ $bgColor: #F0F0F0
     background-size: 150% 200%
     background-repeat: no-repeat
     display: flex
+    width: 100%
     align-items: end
     justify-content: space-between
     padding: 0.875rem
