--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -1,4 +1,4 @@
-@import 'assets/fonts/Gotham Pro/gothampro.css'
+@import 'assets/fonts/GothamPro/gothampro.css'
 @import 'asset/css/reset.css'
 
 $orange: #F19D2F
