--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -1,5 +1,5 @@
 @import 'assets/fonts/GothamPro/gothampro.css'
-@import 'asset/css/reset.css'
+@import 'assets/css/reset.css'
 
 $orange: #F19D2F
 $peach: #FFD1AC
