--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
 /* fixes paths */
-@import 'assets/fonts/GothamPro/gothampro.css';
-@import 'assets/css/reset.css';
+@import '../fonts/GothamPro/gothampro.css';
+@import '../css/reset.css';
 .offer-header {
   background-color: #F19D2F;
   padding: 0.625rem 0.875rem;
