--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -31,7 +31,7 @@ $bgColor: #F0F0F0
     text-align: center
 
 .offer-content
-    background-image: url('assets/images/offer.png')
+    background-image: url('../images/offer.png')
     height: 18.1875rem
     background-position: 50% 60%
     background-size: 150% 200%
